--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,8 @@
     width: 100vw;
     display: flex;
     flex-direction: column;
+    gap: 10px;
+    align-items: center;
 }
 
 .headBar{
@@ -28,4 +30,39 @@
     align-content: center;
     font-size: 2rem;
     font-family: 'tektur' , cursive;
+}
+
+.addBar{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    flex-direction: row;
+    width: 85%;
+}
+
+.addName{
+    visibility: hidden;
+    opacity: 0;
+    margin-left: 5px;
+    flex: 0.5;
+    outline: none !important;
+    border-radius: 14px;
+    transition: visibility 0s , opacity 0.3s ease-in;
+    padding: 5px;
+    font-size: 1.2rem;
+}
+.addButton{
+    height: 50px;
+    width: 100px;
+    border-radius: 15px;
+    padding: 5px;
+    font-size: 1.2rem;
+}
+
+.addButton:hover{
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.addButton:active{
+    background-color: rgba(0, 0, 0, 0.5);
 }
