--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,11 @@
     src: url(./Content/headFont.ttf);
 }
 
+@font-face {
+    font-family: "pangolin";
+    src: url(./Content/pangolin.ttf);
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -28,7 +33,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-family: 'tektur' , cursive;
 }
 
@@ -57,6 +62,7 @@
     border-radius: 15px;
     padding: 5px;
     font-size: 1.2rem;
+    transition: all 0.4s linear;
 }
 
 .addButton:hover{
@@ -65,4 +71,9 @@
 
 .addButton:active{
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+.project{
+    background-color: white;
+    font-family: 'pangolin', cursive;
 }
