--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    gap: 10px;
 }
 
 .task{
@@ -98,6 +99,25 @@
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding: 10px;
+    gap: 15px;
+}
+
+.title{
+    font-size: 1.6rem;
+}
+
+input[type="checkbox"]{
+    appearance: none;
+    outline: none !important;
+    border: 2px solid brown;
+    width: 35px;
+    height: 35px;
+    border-radius: 100%;
+    background-color: aliceblue;
+}
+
+input[type="checkbox"]:checked{
+    background-color: rgb(116, 16, 46);
 }
