--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-user-drag: none;
 }
 
 .container{
