--- a/src/style.css
+++ b/src/style.css
@@ -17,134 +17,51 @@
     -webkit-user-drag: none;
 }
 
+.sideHead{
+    grid-area: 1/1/2/2;
+    font-family: "tektur" , cursive;
+    font-size: 3rem;
+}
+
+.sidebar{
+    grid-area: 2/1/3/2;
+    border-right: 1px ridge rgba(0, 0, 0, 0.6);
+    height: 100%;
+    width: 100%;
+    padding-top: 20px;
+    display: grid;
+    grid-template-rows: 75px auto;
+    place-items: center;
+}
+
 .container{
     height: 100vh;
     width: 100vw;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 150px auto;
+    place-items: center;
 }
 
-.headBar{
-    border-radius: 15px;
-    align-self:center;
-    height: 100px;
-    background-color: aquamarine;
-    width: 90%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    font-size: 1.8rem;
-    font-family: 'tektur' , cursive;
-}
-
-.addBar{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    flex-direction: row;
-    width: 85%;
-}
-
-.addName{
-    visibility: hidden;
-    opacity: 0;
-    margin-left: 5px;
-    flex: 0.5;
-    outline: none !important;
-    border-radius: 14px;
-    transition: visibility 0s , opacity 0.3s ease-in;
-    padding: 5px;
-    font-size: 1.2rem;
-}
-.addButton{
-    height: 50px;
+.addProject{
+    height: 45px;
     width: 100px;
-    border-radius: 15px;
-    padding: 5px;
-    font-size: 1.2rem;
-    transition: all 0.4s linear;
+    border-radius: 13px;
+    background-color: #7fffd4;
+    border: 2px ridge #C8C8C8;
+    font-size: 1.4rem;
+    transition: 0.2s all linear;
 }
 
-.addButton:hover{
-    background-color: rgba(0, 0, 0, 0.3);
+.addProject:hover{
+    background-color: #5FBE9E;
 }
 
-.addButton:active{
-    background-color: rgba(0, 0, 0, 0.5);
+.addProject:active{
+    background-color: #509F85;
 }
 
-.project{
-    background-color: white;
-    font-family: 'pangolin', cursive;
-}
-
-.taskContainer{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+.projectContainer{
     width: 100%;
     height: 100%;
-    gap: 10px;
-    flex:1;
-}
-
-.task{
-    display: flex;
-    width: 50%;
-    height: 75px;
-    border-radius: 20px;
-    background-color: blanchedalmond;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    padding: 10px;
-    gap: 5px;
-}
-
-.title{
-    font-size: 1.6rem;
-}
-
-input[type="checkbox"]{
-    appearance: none;
-    outline: none !important;
-    border: 2px solid brown;
-    width: 35px;
-    height: 35px;
-    border-radius: 100%;
-    background-color: aliceblue;
-    transition: 0.4s all linear;
-}
-
-input[type="checkbox"]:checked{
-    background-color: rgb(116, 16, 46);
-}
-
-input[type="date"]{
-    height: 35px;
-    outline: none !important;
-    border: 2px red solid;
-    padding: 5px;
-    border-radius: 10px;
-}
-
-.deleteIcon,.plusIcon{
-    flex: 1;
-    align-self: flex-end;
-}
-
-
-.iconCont{
-    flex-wrap: wrap;
-    display: flex;
-    flex: 1;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 7px;
 }
