--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,42 @@
 .projectContainer{
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.projectDIV{
+    display: flex;
+    flex-direction: row;
+    width: 65%;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    font-size: 1.3rem;
+    gap: 15px;
+    transition: 0.2s all linear;
+    border-radius: 15px;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.projectDIV:hover{
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.delProject{
+    font-family: 'pangolin';
+    border-radius: 50%;
+    transition: 0.2s all linear;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.delProject:hover{
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .formBG{
@@ -101,6 +137,7 @@ input[type="text"]{
     flex-direction: column;
     place-items: center;
     gap: 5px;
+    z-index: 2;
 }
 
 label{
@@ -114,4 +151,5 @@ label{
     height: 25px;
     width: 90px;
     font-size: 1.1rem;
+    z-index: 2;
 }
