--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,7 @@
     grid-template-columns: 30% 70%;
     grid-template-rows: 150px auto;
     place-items: center;
+    gap: 10px;
 }
 
 .addProject,.submit{
@@ -152,4 +153,22 @@ label{
     width: 90px;
     font-size: 1.1rem;
     z-index: 2;
+}
+
+.taskArea{
+    display: grid;
+    grid-template-rows: 50px auto;
+    place-items: flex-start;
+    width: 100%;
+    height: 100%;
+}
+
+.taskContainer{
+    height: 100%;
+    width: 100%;
+}
+
+.addTask{
+    padding: 5px;
+    font-size: medium;
 }
