--- a/src/style.css
+++ b/src/style.css
@@ -88,6 +88,7 @@
     border-radius: 15px;
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.2);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .projectDIV:hover{
