--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@
     -webkit-user-drag: none;
 }
 
-.sideHead{
+.projectHead{
     grid-area: 1/1/2/2;
     font-family: "tektur" , cursive;
     font-size: 3rem;
@@ -27,25 +27,25 @@
     font-family: "tektur" , cursive;
 }
 
-.sidebar{
-    grid-area: 2/1/3/2;
-    border-right: 1px ridge rgba(0, 0, 0, 0.6);
-    height: 100%;
-    width: 100%;
-    padding-top: 20px;
-    display: grid;
-    grid-template-rows: 75px auto;
-    place-items: center;
-}
-
 .container{
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-columns: 30% 70%;
-    grid-template-rows: 150px auto;
-    place-items: center;
+    grid-template-rows: fit-content(30%) auto auto auto;
+    justify-items: center;
     gap: 10px;
+}
+
+.projectbar{
+    grid-area: 2/1/3/2;
+    border-right: 1px ridge rgba(0, 0, 0, 0.6);
+    width: 100%;
+    display: grid;
+    grid-template-rows: fit-content(60px) fit-content(300px);
+    justify-items: center;
+    grid-auto-flow: dense;
+    border-top: 1px solid black;
+    padding-top: 10px;
 }
 
 .addProject,.submit,.submitTask{
@@ -67,21 +67,38 @@
 }
 
 .projectContainer{
+
+    margin-top: 15px;
     width: 100%;
-    height: 100%;
+    max-height: 55px;
     display: flex;
-    flex-direction: column;
+    flex-direction:row;
     justify-content: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
+    overflow-x: scroll;
 }
+
+.projectContainer::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+.projectContainer::-webkit-scrollbar{
+    height: 6px;
+	background-color: #F5F5F5;
+}
+
+.projectContainer::-webkit-scrollbar-thumb{
+    background-color: #000000;
+}
+
 .projectDIV,.taskDIV{
     display: flex;
     flex-direction: row;
-    width: 65%;
+    min-width: 321px;
     justify-content: space-between;
     align-items: center;
-    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
     font-size: 1.3rem;
     gap: 15px;
     transition: 0.2s all linear;
@@ -115,8 +132,12 @@
     align-items: center;
     color: red;
 }
-.delProject:hover,.delTask:hover{
-    background-color: rgba(0, 0, 0, 0.4);
+.delProject:hover{
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.delTask:hover{
+    background-color: rgba(175, 159, 68, 0.477)
 }
 
 .formBG{
